@@ -1,4 +1,6 @@
 DIST v2.1.0.tar.gz 6394 BLAKE2B 1e8ab8ac38338b005d7143b3272e985c6a3d760a4af25030219139618908563341ec753e71dd882f2feabd83ac9148dac148d760c89554af6deaed38f4db8733 SHA512 fa47e2260e8a6a88053ef936025450033f2ab24e73eaaea7bfdf5d4f7c399b98a4fc13f6ec2060ecb4de0c18c9c1f2f01d5ee8249ac24d53c336d102f7365612
+DIST v3.0.0.tar.gz 7865 BLAKE2B d67440dbb6f191bcac62de8173c6e10099771418b30cb4fe94b655e8c12a2a0773c18a82c76d6f845ee530d5256871af597faa7d517a303ab26281237d9fc4e8 SHA512 435b0e094a36a91075b54703e7fe7bfbfa5a24927cb693de9f09ae9a79fcd5d2aad4d1b4a4191d55bc56709b534e2760bc2ac4857bf0968f15d634a2100f6de1
 EBUILD ddos-mitigator-2.1.0.ebuild 632 BLAKE2B f6e0e91cb3224ab53bda00d135f3d2d8674c3c7901f6074e19a4f70d661bfde744f4121b2c6307f745ebe46c2d9dd843e9beaafdc7af841150e8900c5ab53ae4 SHA512 bd70cceefdbff59a5f9f915a6a877d565260cb9955e9e612f076fb42ce56cd83580bb2fe041a42edd91eb2aaacdf563fb982fa58883415cb32f972a9f87be08e
-MISC ChangeLog 195 BLAKE2B 495db5446d78c7607cb98b1335ec04e8a743e38c8103a8468a811f3071c13f800c9c0f7c0d50967f98e2071c6c2d1031ad2f7e4070696ef721fb5c05461c6dd4 SHA512 9607d9f449bbedf038b18166a48b5046af4628e2f64816f6bab0e7a0c57d932e6e41046e209b0431188a0ab77ca8898f7ac8e2c1e7e3154bb7c85dd332ea5eb2
+EBUILD ddos-mitigator-3.0.0.ebuild 999 BLAKE2B c121855d034ad2b61ff44f71325686989dcdb1684860ea01613b42c18dce9db99a96f1ca6df669bb8abe08ff7dc70430db254915a87154881a02438028cce8f3 SHA512 2835a5ce15cb0a423a4043318d06f1a62c0ce13c2a2097483a77983f00387a876c9e5cc0b243423e4e62124a8717125f003f52a6d5213174b23cd3ce19c425a2
+MISC ChangeLog 413 BLAKE2B 69e9b7d7c3203b0db69608c60aa9cc2ee2cd3590b1ee7cf1e27256560244e6d9ff4ba20a79b4c7c0f12b3e05930e445b2f41be6a37cf06779a8e35808a560ed8 SHA512 6af56a50f9c2e6cca9582bc16dbfef7217db3257a0ea04676b58188bcd75edd82c8f35e8595f67151d648e9a12e851baa27b9b6ed908eb39c42b81a72d526885
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
